# telegram-evolution-api

./: .env.example  .gitignore  AGENTS.md  API_EXAMPLES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRODUCTION.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  tele.dev.hamedco.com.nginx.conf
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
app/: config.py  main.py  metrics.py  middleware.py
app/api/: admin.py  auth.py  chats.py  contacts_groups.py  instances.py  messages.py  organizations.py  queue.py  webhooks.py
app/core/: error_codes.py  jwt.py  response.py
app/db/: database.py  models.py  repositories.py
app/mcp/: __init__.py  __main__.py  auth.py  context.py  errors.py  handler.py  sanitize.py  server.py  sse.py
app/mcp/prompts/: templates.py
app/mcp/resources/: chats.py  contacts.py  instances.py  messages.py
app/mcp/tools/: channels.py  chats.py  contacts.py  groups.py  instances.py  messaging.py  webhooks.py
app/middleware/: asgi.py  auth.py  compose.py  jwt_auth.py  logging.py  rate_limit.py  request_context.py  response.py
app/schemas/: auth.py  instances.py  media.py  messages.py  queue.py  response.py  webhooks.py
app/security/: api_keys.py  encryption.py  webhook_signing.py
app/services/: channels.py  chats.py  contacts.py  groups.py  message_queue.py  messaging.py  organizations.py  rate_limits.py  telegram_auth.py  telegram_manager.py  webhook_dispatcher.py
app/utils/: file_utils.py
app/workers/: message_worker.py  webhook_worker.py
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial_schema.py
specs/001-telegram-api-gateway/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-telegram-api-gateway/checklists/: requirements.md
specs/001-telegram-api-gateway/contracts/: auth.md  chats.md  health.md  instances.md  messages.md  webhooks.md
specs/002-rich-messaging/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rich-messaging/contracts/: actions.md  (+3 more)
specs/003-reliability-queues/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/004-contacts-groups-channels/: spec.md
specs/005-multi-tenant-saas/: spec.md
specs/006-observability-admin/: spec.md
specs/007-horizontal-scaling/: spec.md
specs/008-dashboard-ui/: spec.md
specs/009-mcp-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-mcp-alignment/: plan.md  tasks.md
tests/: conftest.py  test_api_keys.py  test_auth.py  test_chats.py  test_contacts_groups.py  test_encryption.py  test_instances.py  test_media.py  test_message_actions.py  test_message_queue.py  test_message_worker.py  test_messages.py  test_observability.py  test_organizations.py  test_rate_limits.py  test_reactions.py  test_validation.py  test_webhook_dispatcher.py  test_webhook_signing.py  test_webhooks.py
tests/test_mcp/: conftest.py  test_auth.py  test_discovery.py  test_prompts.py  test_resources.py  test_tools_channels.py  test_tools_chats.py  test_tools_contacts.py  test_tools_groups.py  test_tools_instances.py  test_tools_messaging.py  test_transport_sse.py  test_transport_stdio.py
(+4 files in other folders)
