[project]
name = "telegram-evolution-api"
version = "0.1.0"
description = "Self-hosted Telegram API Gateway with Telethon and FastAPI"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "telethon>=1.37.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.5.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "redis>=5.1.0",
    "cryptography>=43.0.0",
    "bcrypt>=4.2.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
